--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,13 @@
 			<artifactId>jetty-util</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.3.1</version>
+		</dependency>
+		
 	    <!-- 
 	    <dependency>
     		<groupId>org.apache.poi</groupId>
