--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>skynet</groupId>
-  <artifactId>skynet-standard</artifactId>
+  <artifactId>skynet-sandplay</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -199,6 +199,7 @@
 	    	<artifactId>commons-dbcp</artifactId>  
 	    	<version>1.4</version>  
 		</dependency>  
+		<!-- 
 	    <dependency>
 			<groupId>org.mortbay</groupId>
 			<artifactId>jetty</artifactId>
@@ -209,11 +210,12 @@
 			<artifactId>jetty-util</artifactId>
 			<version>1.0</version>
 		</dependency>
+		 -->
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
-		    <version>2.3.1</version>
+		    <version>2.5</version>
 		</dependency>
 		
 	    <!-- 
