--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,10 +15,19 @@
         <filter-name>openSessionInViewFilter</filter-name>  
         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>  
         <init-param>  
+            <!-- 
             <param-name>singleSession</param-name>  
             <param-value>true</param-value>  
+             -->
+            <param-name>sessionFactoryBean</param-name>
+   			<param-value>sessionFactory</param-value>
         </init-param>  
     </filter>  
+      <filter-mapping>
+        <filter-name>openSessionInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <!--spring mvc 配置 -->  
     <servlet>  
         <servlet-name>springMVC</servlet-name>  
